--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "today",
   "version": "1.0.0",
   "description": "",
-  "main": "bin/index.js",
+  "main": "src/index.js",
   "keywords": [],
   "author": "Nico Rithner",
   "license": "ISC",
-  "bin": {
-    "today": "./bin/index.js"
+  "type":"module",
+  "src": {
+    "today": "./src/index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "node-fetch": "^3.2.10",
     "yargs": "^17.6.0"
   }
 }
